# sonnet-scripts

./: .devcontainer.json  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  hello.py  pyproject.toml  pytest.ini  repomix-output.xml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci_pipeline.yml
cli/: README.md  pyproject.toml
cli/src/sonnet_cli/: __init__.py  checks.py  exceptions.py  init_cmd.py  main.py  services.py  stack.py  templates.py
cli/src/sonnet_cli/templates/: README.md.j2  docker-compose.yml.j2  env.j2  init.sql.j2
cli/src/sonnet_cli/templates/pgadmin/: pgpass.j2  preferences.json.j2  servers.json.j2
cli/tests/: __init__.py  conftest.py  test_checks.py  test_init.py  test_main.py  test_stack.py  test_templates.py
cloudbeaver/conf/: initial-data.conf  initial-server.conf.json
dbtbase/: Dockerfile  README.md  requirements.txt
dbtbase/dbt_project/: dbt_project.yml  packages.yml  profiles.yml
dbtbase/dbt_project/macros/: generate_schema_name.sql
dbtbase/dbt_project/models/: schema.yml
dbtbase/dbt_project/models/marts/: fct_claims_summary.sql
duckdb/: Dockerfile  init.sql
jupyterbase/: Dockerfile  jupyter_notebook_config.py  pgduckdb_connect.ipynb  requirements.txt
linuxbase/: Dockerfile
pgadmin/: preferences.json  servers.json
pgadmin4/: pgpass
pipelinebase/: Dockerfile  config.py  logging_config.py  requirements.txt
pipelinebase/db/: __init__.py  duckdb.py  minio.py  postgres.py  validation.py
pipelinebase/etl_pipelines/: duckdb_to_minio.py  minio_to_duckdb.py
pipelinebase/ingest_claims/: db_utils.py  load_claims_to_db.py  schema.py
pipelinebase/tests/: __init__.py
pipelinebase/tests/integration/: test_pipeline.py
pipelinebase/tests/unit/: test_db_utils.py  test_load_claims_to_db.py
pythonbase/: Dockerfile  requirements.txt
pythonbase/etl_pipelines/: db_utils.py  duckdb_to_minio.py  minio_to_duckdb.py
pythonbase/ingest_claims/: db_utils.py  load_claims_to_db.py
pythonbase/tests/: conftest.py
pythonbase/tests/integration/: test_pipeline.py
pythonbase/tests/unit/: test_db_utils.py
(+2 files in other folders)
