[project]
name = "sonnet-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "dbt-core>=1.9.1",
    "duckdb>=1.1.3",
    "flask>=3.1.0",
    "great-expectations>=0.18.8",
    "matplotlib>=3.10.0",
    "mysql-connector-python>=9.1.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2>=2.9.10",
    "pyarrow>=18.1.0",
    "pyodbc>=5.2.0",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.8.6",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
    "torch>=2.5.1",
]
